# auto_backend

./: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
cars/: filters.py  models.py  serializers.py  urls.py  views.py
cars/migrations/: 0001_initial.py
chat/: consumers.py  models.py  routing.py  serializers.py
chat/migrations/: 0001_initial.py  0002_chatmodel_chat_id_chatmodel_created_at_and_more.py
client/: asset-manifest.json  index.html
configs/: asgi.py  celery.py  celery_conf.py  channels_conf.py  email_conf.py  routing.py  settings.py  urls.py
core/: models.py  pagination.py  permissions.py  region_dict.py
core/dataclases/: user_dataclass.py
core/enums/: country_region_enum.py  profanity_enum.py  regex_enum.py  tokens_enum.py
core/middlewares/: auth_socket_middleware.py
core/services/: currency_service.py  email_service.py  errors.py  jwt_service.py  managers_notification.py  upload_photos.py
currency/: models.py  serializers.py  urls.py  views.py
currency/migrations/: 0001_initial.py
listings/: filters.py  manager.py  models.py  serializers.py  urls.py  views.py
listings/migrations/: 0001_initial.py  0002_alter_listingmodel_region.py  0003_alter_listingmodel_region.py  0004_listingmodel_initial_currency_rate.py  (+4 more)
templates/: manager_notification_email.html  profanity_notification_email.html  recovery.html  register.html
users/: manager.py  models.py  serializers.py  urls.py  views.py
users_auth/: models.py  serializers.py  urls.py  views.py
(+13 files in other folders)
